[gd_scene load_steps=5 format=3 uid="uid://be6o7nb14bool"]

[ext_resource type="Script" path="res://scripts/water_bullet.gd" id="1_tkf1p"]
[ext_resource type="Texture2D" uid="uid://cth7ygrd1aage" path="res://scenes/water_bullet.svg" id="2_4j1wq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cec1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4j1wq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m30qp"]

[node name="WaterBullet" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 24
script = ExtResource("1_tkf1p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cec1i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m30qp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-5, -5, 10, 10)

[node name="LeftScreenTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="LeftScreenTimer" to="." method="_on_left_screen_timer_timeout"]
